--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/QueryMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/QueryMain.xaml
@@ -32,6 +32,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />            
         </Grid.RowDefinitions>
         
         <Border Style="{StaticResource CountBorder}" Grid.Row="0">
@@ -61,10 +62,14 @@
             <dxg:GridColumn FieldName="_links" />
             <dxg:GridColumn FieldName="createdBy" />
             <dxg:GridColumn FieldName="lastModifiedBy" />
-            <dxg:GridColumn FieldName="url" />
-               
+            <!--<dxg:GridColumn FieldName="url" />-->
+
         </dxg:GridControl>
 
+
+        <dxe:TextEdit Grid.Row="2" Text="{Binding Queries.SelectedItem.url}"  
+                      TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
+        
     </Grid>
     
 </vncmvvm:ViewBase>
