--- a/AZDORestApiExplorer.Dashboard/Presentation/Views/DashboardMain.xaml
+++ b/AZDORestApiExplorer.Dashboard/Presentation/Views/DashboardMain.xaml
@@ -6,12 +6,19 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 
+    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+    xmlns:dxdb="http://schemas.devexpress.com/winfx/2008/xaml/demobase"
+    xmlns:dxdo="http://schemas.devexpress.com/winfx/2008/xaml/docking"
+    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+    xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
+    
     xmlns:vncmvvm="clr-namespace:VNC.Core.Mvvm;assembly=VNC.CoreNF"
     xmlns:local="clr-namespace:AZDORestApiExplorer.Dashboard.Presentation.Views"
     
     xmlns:views="clr-namespace:AZDORestApiExplorer.Dashboard.Presentation.Views"
     xmlns:viewModels="clr-namespace:AZDORestApiExplorer.Dashboard.Presentation.ViewModels"
-    xmlns:infra="clr-namespace:AZDORestApiExplorer.Core"
+
     prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800"
@@ -25,6 +32,8 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         
         <Border Style="{StaticResource CountBorder}" Grid.Row="0">
@@ -35,17 +44,47 @@
             </StackPanel>
         </Border>
 
-        <DataGrid Grid.Row="1"
+        <dxg:GridControl Grid.Row="1"
                     ItemsSource="{Binding Dashboards.ResultItems}"
                     SelectedItem="{Binding Dashboards.SelectedItem}"               
-                    AutoGenerateColumns="True"
-                    CanUserAddRows="False"
-                    FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-        </DataGrid>
 
+            <dxg:GridColumn FieldName="name" />
+            <dxg:GridColumn FieldName="id" />
+            <dxg:GridColumn FieldName="refreshInterval" />
+            <dxg:GridColumn FieldName="position" />
+            <dxg:GridColumn FieldName="groupId" />
+            <dxg:GridColumn FieldName="url" />
+            <dxg:GridColumn FieldName="_links" />
+        </dxg:GridControl>
+
+        <dxe:TextEdit Grid.Row="2" Text="{Binding Dashboards.SelectedItem.url}"  
+                      TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
+
+        <Grid Grid.Row="3">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <dxg:GridControl Grid.Column="0"
+                ItemsSource="{Binding Dashboards.SelectedItem._links}"
+                ScrollViewer.CanContentScroll="True"
+                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                ScrollViewer.VerticalScrollBarVisibility="Auto">
+
+                <dxg:GridColumn FieldName="self.href" />
+                <dxg:GridColumn FieldName="group.href" />
+
+            </dxg:GridControl>
+
+        </Grid>
+        
     </Grid>
     
 </vncmvvm:ViewBase>
