--- a/AZDORestApiExplorer.Dashboard/Presentation/Views/WidgetMain.xaml
+++ b/AZDORestApiExplorer.Dashboard/Presentation/Views/WidgetMain.xaml
@@ -6,6 +6,13 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 
+    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+    xmlns:dxdb="http://schemas.devexpress.com/winfx/2008/xaml/demobase"
+    xmlns:dxdo="http://schemas.devexpress.com/winfx/2008/xaml/docking"
+    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+    xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
+    
     xmlns:vncmvvm="clr-namespace:VNC.Core.Mvvm;assembly=VNC.CoreNF"
     xmlns:local="clr-namespace:AZDORestApiExplorer.Dashboard.Presentation.Views"
     
@@ -25,6 +32,8 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+            <!--<RowDefinition Height="*" />-->            
         </Grid.RowDefinitions>
         
         <Border Style="{StaticResource CountBorder}" Grid.Row="0">
@@ -35,16 +44,41 @@
             </StackPanel>
         </Border>
 
-        <DataGrid Grid.Row="1"
+        <dxg:GridControl Grid.Row="1"
                     ItemsSource="{Binding Widgets.ResultItems}"
                     SelectedItem="{Binding Widgets.SelectedItem}"               
-                    AutoGenerateColumns="True"
-                    CanUserAddRows="False"
-                    FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-        </DataGrid>
+
+            <dxg:GridColumn FieldName="name" />
+            
+        </dxg:GridControl>
+
+        <dxe:TextEdit Grid.Row="2" Text="{Binding Widgets.SelectedItem.url}"  
+                      TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
+
+        <!--<Grid Grid.Row="3">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <dxg:GridControl Grid.Column="0"
+                ItemsSource="{Binding Widgets.SelectedItem._links}"
+                ScrollViewer.CanContentScroll="True"
+                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                ScrollViewer.VerticalScrollBarVisibility="Auto">
+
+                <dxg:GridColumn FieldName="self.href" />
+                <dxg:GridColumn FieldName="group.href" />
+
+            </dxg:GridControl>
+
+        </Grid>-->
 
     </Grid>
     
