--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/ClassificationNodeMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/ClassificationNodeMain.xaml
@@ -1,5 +1,5 @@
-﻿<vncmvvm:ViewBase
-    x:Class="AZDORestApiExplorer.WorkItemTracking.Presentation.Views.FieldMain"
+<vncmvvm:ViewBase
+    x:Class="AZDORestApiExplorer.WorkItemTracking.Presentation.Views.ClassificationNodeMain"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:prism="http://www.codeplex.com/prism"
@@ -12,10 +12,10 @@
     xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
     xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
     xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
-    
+
     xmlns:vncmvvm="clr-namespace:VNC.Core.Mvvm;assembly=VNC.CoreNF"
     xmlns:local="clr-namespace:AZDORestApiExplorer.WorkItemTracking.Presentation.Views"
-    
+
     xmlns:views="clr-namespace:AZDORestApiExplorer.WorkItemTracking.Presentation.Views"
     xmlns:viewModels="clr-namespace:AZDORestApiExplorer.WorkItemTracking.Presentation.ViewModels"
 
@@ -26,50 +26,64 @@
 
     <UserControl.Resources>
 
+
     </UserControl.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />            
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        
+
         <Border Style="{StaticResource CountBorder}" Grid.Row="0">
             <StackPanel Style="{StaticResource CountStackPanel}" Margin="2">
                 <Label Content="Count:" />
-                <TextBlock Text="{Binding Fields.Count}"
+                <TextBlock Text="{Binding ClassificationNodes.Count}"
                            Style="{StaticResource CountTextBlock}"/>
             </StackPanel>
         </Border>
 
         <dxg:GridControl Grid.Row="1"
-                    ItemsSource="{Binding Fields.ResultItems}"
-                    SelectedItem="{Binding Fields.SelectedItem}"               
+                    ItemsSource="{Binding ClassificationNodes.ResultItems}"
+                    SelectedItem="{Binding ClassificationNodes.SelectedItem}"
+                    FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
 
             <dxg:GridColumn FieldName="name" />
-            <dxg:GridColumn FieldName="referenceName" />
-            <dxg:GridColumn FieldName="type" />
-            <dxg:GridColumn FieldName="description" />
-            <dxg:GridColumn FieldName="usage" />
-            <dxg:GridColumn FieldName="readOnly" />
-            <dxg:GridColumn FieldName="canSortBy" />
-            <dxg:GridColumn FieldName="isQueryable" />
-            <dxg:GridColumn FieldName="isIdentity" />
-            <dxg:GridColumn FieldName="isPicklist" />
-            <dxg:GridColumn FieldName="isPicklistSuggested" />
-            <!--<dxg:GridColumn FieldName="supportedOperations" />-->
-
+            <dxg:GridColumn FieldName="id" />
+            <dxg:GridColumn FieldName="identifier" />
+            <dxg:GridColumn FieldName="structureType" />
+            <dxg:GridColumn FieldName="hasChildren" />
+            <dxg:GridColumn FieldName="path" />
             <!--<dxg:GridColumn FieldName="url" />-->
+            <dxg:GridColumn FieldName="attributes" />
 
         </dxg:GridControl>
 
-        <dxe:TextEdit Grid.Row="2" Text="{Binding Fields.SelectedItem.url}"  
-                      TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
+        <dxe:TextEdit Grid.Row="2"
+            Text="{Binding ClassificationNodes.SelectedItem.url}"
+            TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
+
+        <!--<Grid Grid.Row="3">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <ContentControl Grid.Column="0" FontSize="12"
+                                Content="{Binding ClassificationNode.SelectedItem}"
+                                ContentTemplate="{StaticResource ProjectTemplateStackPanel}"/>
+
+            <ContentControl Grid.Column="1"  FontSize="12"
+                                Content="{Binding ClassificationNode.SelectedItem}"
+                                ContentTemplate="{StaticResource ProjectTemplateGrid}"/>-->
 
         <Grid Grid.Row="3">
             <Grid.RowDefinitions>
@@ -81,18 +95,20 @@
             </Grid.ColumnDefinitions>
 
             <dxg:GridControl Grid.Column="0"
-                ItemsSource="{Binding Fields.SelectedItem.supportedOperations}"
-                ScrollViewer.CanContentScroll="True"
-                ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    ItemsSource="{Binding ClassificationNodes.SelectedItem.attributes}"
+                    ScrollViewer.CanContentScroll="True"
+                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto">
 
-                <dxg:GridColumn FieldName="referenceName" />
-                <dxg:GridColumn FieldName="name" />
+                <dxg:GridColumn FieldName="startDate" />
+                <dxg:GridColumn FieldName="finishDate" />
 
             </dxg:GridControl>
+
+            <TextBlock Grid.Column="1" Text="{Binding ClassificationNodes.SelectedItem.attributes.startDate}" />
 
         </Grid>
 
     </Grid>
-    
+
 </vncmvvm:ViewBase>
