--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/TemplateMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/TemplateMain.xaml
@@ -32,6 +32,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />            
         </Grid.RowDefinitions>
         
         <Border Style="{StaticResource CountBorder}" Grid.Row="0">
@@ -51,6 +52,10 @@
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
             <dxg:GridColumn FieldName="name" />
         </dxg:GridControl>
+
+        <dxe:TextEdit Grid.Row="2" Text="{Binding Templates.SelectedItem.url}"  
+                      TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
+
 
     </Grid>
     
