--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemIconMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemIconMain.xaml
@@ -32,6 +32,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         
         <Border Style="{StaticResource CountBorder}" Grid.Row="0">
@@ -45,14 +46,16 @@
         <dxg:GridControl Grid.Row="1"
                     ItemsSource="{Binding WorkItemIcons.ResultItems}"
                     SelectedItem="{Binding WorkItemIcons.SelectedItem}"               
-                    FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
             <dxg:GridColumn FieldName="id" />
-            <dxg:GridColumn FieldName="url" />
+            <!--<dxg:GridColumn FieldName="url" />-->
         </dxg:GridControl>
 
+        <dxe:TextEdit Grid.Row="2" Text="{Binding WorkItemIcons.SelectedItem.url}"  
+                      TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
+        
     </Grid>
     
 </vncmvvm:ViewBase>
