--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemRelationTypeMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemRelationTypeMain.xaml
@@ -32,6 +32,8 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />            
         </Grid.RowDefinitions>
         
         <Border Style="{StaticResource CountBorder}" Grid.Row="0">
@@ -49,12 +51,46 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
+            
             <dxg:GridColumn FieldName="name" />
             <dxg:GridColumn FieldName="referenceName" />
             <dxg:GridColumn FieldName="attributes" />
-            <dxg:GridColumn FieldName="url" />
+            <!--<dxg:GridColumn FieldName="url" />-->
         </dxg:GridControl>
 
+        <dxe:TextEdit Grid.Row="2" Text="{Binding WorkItemRelationTypes.SelectedItem.url}"  
+                      TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
+
+        <Grid Grid.Row="3">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <dxg:GridControl Grid.Column="0"
+                ItemsSource="{Binding WorkItemRelationTypes.SelectedItem.attributes}"
+                ScrollViewer.CanContentScroll="True"
+                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                ScrollViewer.VerticalScrollBarVisibility="Auto">
+
+                <dxg:GridColumn FieldName="usage" />
+                <dxg:GridColumn FieldName="editable" />
+                <dxg:GridColumn FieldName="enabled" />
+                <dxg:GridColumn FieldName="acyclic" />
+                <dxg:GridColumn FieldName="directional" />
+                <dxg:GridColumn FieldName="singleTarget" />
+                <dxg:GridColumn FieldName="topology" />
+                <dxg:GridColumn FieldName="remote" />
+                <dxg:GridColumn FieldName="isForward" />
+                <dxg:GridColumn FieldName="oppositeEndReferenceName" />
+
+            </dxg:GridControl>
+
+        </Grid>
+        
     </Grid>
     
 </vncmvvm:ViewBase>
