--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypeCategoryMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypeCategoryMain.xaml
@@ -32,6 +32,8 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />            
         </Grid.RowDefinitions>
         
         <Border Style="{StaticResource CountBorder}" Grid.Row="0">
@@ -49,12 +51,40 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
+            
             <dxg:GridColumn FieldName="name" />
             <dxg:GridColumn FieldName="referenceName" />
-            <dxg:GridColumn FieldName="defaultWorkItemType" />
+            <dxg:GridColumn FieldName="defaultWorkItemType" />            
+            <dxg:GridColumn FieldName="defaultWorkItemType.name" />
             <dxg:GridColumn FieldName="workItemTypes" />
-            <dxg:GridColumn FieldName="url" />
+            
+            <!--<dxg:GridColumn FieldName="url" />-->
         </dxg:GridControl>
+
+        <dxe:TextEdit Grid.Row="2" Text="{Binding WorkItemTypeCategories.SelectedItem.url}"  
+                      TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
+
+        <Grid Grid.Row="3">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <dxg:GridControl Grid.Column="0"
+                ItemsSource="{Binding WorkItemTypeCategories.SelectedItem.workItemTypes}"
+                ScrollViewer.CanContentScroll="True"
+                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                ScrollViewer.VerticalScrollBarVisibility="Auto">
+
+                <dxg:GridColumn FieldName="name" />
+                <dxg:GridColumn FieldName="url" />
+
+            </dxg:GridControl>
+
+        </Grid>
 
     </Grid>
     
