--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypeMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypeMain.xaml
@@ -32,6 +32,8 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="200" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         
         <Border Style="{StaticResource CountBorder}" Grid.Row="0">
@@ -41,7 +43,7 @@
                            Style="{StaticResource CountTextBlock}"/>
             </StackPanel>
         </Border>
-
+    
         <dxg:GridControl Grid.Row="1"
                     ItemsSource="{Binding WorkItemTypes.ResultItems}"
                     SelectedItem="{Binding WorkItemTypes.SelectedItem}"               
@@ -64,6 +66,62 @@
             <dxg:GridColumn FieldName="url" />
             
         </dxg:GridControl>
+
+        <dxe:TextEdit Grid.Row="2" Text="{Binding WorkItemTypes.SelectedItem.xmlForm}"  TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
+
+        <Grid Grid.Row="3">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <dxg:GridControl Grid.Column="0"
+                ItemsSource="{Binding WorkItemTypes.SelectedItem.states}"
+                ScrollViewer.CanContentScroll="True"
+                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                ScrollViewer.VerticalScrollBarVisibility="Auto">
+
+                <dxg:GridColumn FieldName="name" />
+                <dxg:GridColumn FieldName="category" />
+                <dxg:GridColumn FieldName="color" />
+
+            </dxg:GridControl>
+
+            <dxg:GridControl Grid.Column="1"
+                ItemsSource="{Binding WorkItemTypes.SelectedItem.fields}"
+                ScrollViewer.CanContentScroll="True"
+                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                ScrollViewer.VerticalScrollBarVisibility="Auto">
+
+                <dxg:GridColumn FieldName="name" />
+                <dxg:GridColumn FieldName="referenceName" />
+                <dxg:GridColumn FieldName="alwaysRequired" />
+                <dxg:GridColumn FieldName="defaultValue" />
+                <dxg:GridColumn FieldName="helpText" />                
+                <dxg:GridColumn FieldName="url" />
+
+            </dxg:GridControl>
+
+            <dxg:GridControl Grid.Column="2"
+                ItemsSource="{Binding WorkItemTypes.SelectedItem.fieldInstances}"
+                ScrollViewer.CanContentScroll="True"
+                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                ScrollViewer.VerticalScrollBarVisibility="Auto">
+
+                <dxg:GridColumn FieldName="name" />
+                <dxg:GridColumn FieldName="referenceName" />
+                <dxg:GridColumn FieldName="alwaysRequired" />
+                <dxg:GridColumn FieldName="defaultValue" />
+                <dxg:GridColumn FieldName="helpText" />
+                <dxg:GridColumn FieldName="url" />
+
+            </dxg:GridControl>
+
+        </Grid>
 
     </Grid>
     
