--- a/AZDORestApiExplorer.WorkItemTrackingProcess/Presentation/Views/BehaviorMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTrackingProcess/Presentation/Views/BehaviorMain.xaml
@@ -6,6 +6,13 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 
+    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+    xmlns:dxdb="http://schemas.devexpress.com/winfx/2008/xaml/demobase"
+    xmlns:dxdo="http://schemas.devexpress.com/winfx/2008/xaml/docking"
+    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+    xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"    
+    
     xmlns:vncmvvm="clr-namespace:VNC.Core.Mvvm;assembly=VNC.CoreNF"
     xmlns:local="clr-namespace:AZDORestApiExplorer.WorkItemTrackingProcess.Presentation.Views"
     
@@ -25,6 +32,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         
         <Border Style="{StaticResource CountBorder}" Grid.Row="0">
@@ -35,17 +43,51 @@
             </StackPanel>
         </Border>
 
-        <DataGrid Grid.Row="1"
+        <dxg:GridControl Grid.Row="1"
                     ItemsSource="{Binding Behaviors.ResultItems}"
                     SelectedItem="{Binding Behaviors.SelectedItem}"               
-                    AutoGenerateColumns="True"
-                    CanUserAddRows="False"
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-        </DataGrid>
 
+            <dxg:GridColumn FieldName="name" />
+            <dxg:GridColumn FieldName="id" />
+            <dxg:GridColumn FieldName="description" />
+            <dxg:GridColumn FieldName="_abstract" />
+            <dxg:GridColumn FieldName="overriden" />
+            <dxg:GridColumn FieldName="custom" />
+            <dxg:GridColumn FieldName="color" />
+            <dxg:GridColumn FieldName="icon" />
+            <dxg:GridColumn FieldName="inherits" />
+            <dxg:GridColumn FieldName="rank" />
+            <dxg:GridColumn FieldName="fields" />
+            
+        </dxg:GridControl>
+
+        <Grid Grid.Row="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <dxg:GridControl Grid.Column="0"
+                ItemsSource="{Binding Behaviors.SelectedItem.fields}"
+                ScrollViewer.CanContentScroll="True"
+                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                ScrollViewer.VerticalScrollBarVisibility="Auto">
+
+                <dxg:GridColumn FieldName="behaviorFieldId" />
+                <dxg:GridColumn FieldName="name" />
+                <dxg:GridColumn FieldName="id" />
+
+            </dxg:GridControl>
+
+        </Grid>
+        
     </Grid>
     
 </vncmvvm:ViewBase>
