--- a/AZDORestApiExplorer.WorkItemTrackingProcess/Presentation/Views/FieldMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTrackingProcess/Presentation/Views/FieldMain.xaml
@@ -32,6 +32,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         
         <Border Style="{StaticResource CountBorder}" Grid.Row="0">
@@ -48,15 +49,21 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
+
             <dxg:GridColumn FieldName="name" />
             <dxg:GridColumn FieldName="referenceName" />
             <dxg:GridColumn FieldName="type" />
-            <dxg:GridColumn FieldName="description" />
+            <dxg:GridColumn FieldName="customization" />
             <dxg:GridColumn FieldName="required" />
             <dxg:GridColumn FieldName="defaultValue" />
-            <dxg:GridColumn FieldName="customization" />
+            <dxg:GridColumn FieldName="description" />
+
             <dxg:GridColumn FieldName="url" />
+
         </dxg:GridControl>
+
+        <dxe:TextEdit Grid.Row="2" Text="{Binding Fields.SelectedItem.url}"  
+                      TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
 
     </Grid>
     
