--- a/AZDORestApiExplorer/Presentation/Views/ProjectMain.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/ProjectMain.xaml
@@ -114,6 +114,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
             <!--<RowDefinition Height="*" />-->
         </Grid.RowDefinitions>
         
@@ -133,17 +134,24 @@
             ScrollViewer.CanContentScroll="True"
             ScrollViewer.HorizontalScrollBarVisibility="Auto"
             ScrollViewer.VerticalScrollBarVisibility="Auto">
+            
             <dxg:GridColumn FieldName="name" />
             <dxg:GridColumn FieldName="id" />
-            <dxg:GridColumn FieldName="description" />
+
             <dxg:GridColumn FieldName="state" />
             <dxg:GridColumn FieldName="revision" />
             <dxg:GridColumn FieldName="visibility" />
             <dxg:GridColumn FieldName="lastUpdateTime" />
-            <dxg:GridColumn FieldName="url" />
+            <dxg:GridColumn FieldName="description" />    
+            
+            <!--<dxg:GridColumn FieldName="url" />-->
+            
         </dxg:GridControl>
 
-        <!--<Grid Grid.Row="2">
+        <dxe:TextEdit Grid.Row="2" Text="{Binding Projects.SelectedItem.url}"  
+                      TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
+        
+        <!--<Grid Grid.Row="3">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
