Getting ready to add some CreateX using new ItemTemplate

--- a/AZDORestApiExplorer.WorkItemTracking/ACTIONWorkItemMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/ACTIONWorkItemMain.xaml
@@ -1,5 +1,5 @@
-﻿<vncmvvm:ViewBase
-    x:Class="AZDORestApiExplorer.WorkItemTracking.Presentation.Views.FieldMain"
+<vncmvvm:ViewBase
+    x:Class="AZDORestApiExplorer.WorkItemTracking.Presentation.Views.CreateWorkItemMain"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:prism="http://www.codeplex.com/prism"
@@ -12,10 +12,10 @@
     xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
     xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
     xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
-    
+
     xmlns:vncmvvm="clr-namespace:VNC.Core.Mvvm;assembly=VNC.CoreNF"
     xmlns:local="clr-namespace:AZDORestApiExplorer.WorkItemTracking.Presentation.Views"
-    
+
     xmlns:views="clr-namespace:AZDORestApiExplorer.WorkItemTracking.Presentation.Views"
     xmlns:viewModels="clr-namespace:AZDORestApiExplorer.WorkItemTracking.Presentation.ViewModels"
 
@@ -31,61 +31,53 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="3*" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <dxlc:LayoutGroup Grid.Row="0" Orientation="Horizontal">
-            
-            <Border Style="{StaticResource CountBorder}" >
-                <StackPanel Style="{StaticResource CountStackPanel}" Margin="2">
-                    <Label Content="Count:" />
-                    <TextBlock Text="{Binding Fields.Count}"
+        <Border Style="{StaticResource CountBorder}" Grid.Row="0">
+            <StackPanel Style="{StaticResource CountStackPanel}" Margin="2">
+                <Label Content="Count:" />
+                <TextBlock Text="{Binding WorkItems.Count}"
                            Style="{StaticResource CountTextBlock}"/>
-                </StackPanel>
-            </Border>
-            
-            <dxlc:LayoutItem Background="{StaticResource WorkItemTypeColor}" HorizontalAlignment="Left">
-                <Button Click="ExportToExcel_Click" />
+            </StackPanel>
+        </Border>
 
-                <!--<Button 
-                    Command="{Binding ExportToExcelCommand }"
-                                Content="{Binding ExportToExcelContent, FallbackValue='Export to Excel' }"
-                                ToolTip="{Binding ExportToExcelToolTip, FallbackValue='Export to Excel ToolTip' }" />-->                
-            </dxlc:LayoutItem>
-            
-        </dxlc:LayoutGroup>
-
-        <dxe:TextEdit Grid.Row="1" Text="{Binding Fields.SelectedItem.url}"  
-                      TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
-        
-        <dxg:GridControl x:Name="gcMainTable" Grid.Row="2"
-                    ItemsSource="{Binding Fields.ResultItems}"
-                    SelectedItem="{Binding Fields.SelectedItem}"
-                   
+        <dxg:GridControl Grid.Row="1"
+                    ItemsSource="{Binding WorkItems.ResultItems}"
+                    SelectedItem="{Binding WorkItems.SelectedItem}"
+                    FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-
             <dxg:GridColumn FieldName="name" />
-            <dxg:GridColumn FieldName="referenceName" />
-            <dxg:GridColumn FieldName="type" />
-            <dxg:GridColumn FieldName="description" />
-            <dxg:GridColumn FieldName="usage" />
-            <dxg:GridColumn FieldName="readOnly" />
-            <dxg:GridColumn FieldName="canSortBy" />
-            <dxg:GridColumn FieldName="isQueryable" />
-            <dxg:GridColumn FieldName="isIdentity" />
-            <dxg:GridColumn FieldName="isPicklist" BestFitMode="Smart"/>
-            <dxg:GridColumn FieldName="isPicklistSuggested" />
-            <!--<dxg:GridColumn FieldName="supportedOperations" />-->
-
-            <dxg:GridColumn FieldName="url" />
-
         </dxg:GridControl>
 
-        <Grid Grid.Row="3">
+        <dxe:TextEdit Grid.Row="2"
+            Text="{Binding WorkItem.SelectedItem.url}"
+            TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
+
+        <!--<Grid Grid.Row="3">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <ContentControl Grid.Column="0" FontSize="12"
+                                Content="{Binding WorkItem.SelectedItem}"
+                                ContentTemplate="{StaticResource ProjectTemplateStackPanel}"/>
+
+            <ContentControl Grid.Column="1"  FontSize="12"
+                                Content="{Binding WorkItem.SelectedItem}"
+                                ContentTemplate="{StaticResource ProjectTemplateGrid}"/>
+
+        </Grid>-->
+        
+        <!--<Grid Grid.Row="3">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
@@ -105,8 +97,8 @@
 
             </dxg:GridControl>
 
-        </Grid>
+        </Grid>-->
 
     </Grid>
-    
+
 </vncmvvm:ViewBase>
