--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypeMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypeMain.xaml
@@ -31,12 +31,12 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="*" MinHeight="100"/>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="*" MinHeight="100"/>
             <RowDefinition Height="100" />
         </Grid.RowDefinitions>
-      
+
         <Border Style="{StaticResource CountBorder}" Grid.Row="0" HorizontalAlignment="Left">
             <StackPanel Orientation="Horizontal">
                 <StackPanel Style="{StaticResource CountStackPanel}" Margin="2">
@@ -47,7 +47,7 @@
                 <dxe:TextEdit Grid.Row="0" Text="{Binding RequestUri}" Margin="5" />
             </StackPanel>
         </Border>
-    
+
         <dxg:GridControl Grid.Row="1"
                     ItemsSource="{Binding WorkItemTypes.ResultItems}"
                     SelectedItem="{Binding WorkItemTypes.SelectedItem}"               
@@ -55,7 +55,7 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-            
+
             <dxg:GridColumn FieldName="name" />
             <dxg:GridColumn FieldName="referenceName" />
             <dxg:GridColumn FieldName="description" />
@@ -65,10 +65,10 @@
             <dxg:GridColumn FieldName="xmlForm" />
             <dxg:GridColumn FieldName="fields" />
             <dxg:GridColumn FieldName="fieldInstances" />
-            <dxg:GridColumn FieldName="transitions" />
+            <!--<dxg:GridColumn FieldName="transitions" />-->
             <dxg:GridColumn FieldName="states" />
             <!--<dxg:GridColumn FieldName="url" />-->
-            
+
         </dxg:GridControl>
 
         <dxe:TextEdit Grid.Row="2" Text="{Binding WorkItemTypes.SelectedItem.url}" />
@@ -78,9 +78,12 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
             <dxg:GridControl Grid.Column="0"
@@ -94,7 +97,7 @@
                 <dxg:GridColumn FieldName="color" />
 
             </dxg:GridControl>
-            
+
             <dxg:GridControl Grid.Column="1"
                 ItemsSource="{Binding WorkItemTypes.SelectedItem.fields}"
                 ScrollViewer.CanContentScroll="True"
@@ -105,7 +108,7 @@
                 <dxg:GridColumn FieldName="referenceName" />
                 <dxg:GridColumn FieldName="alwaysRequired" />
                 <dxg:GridColumn FieldName="defaultValue" />
-                <dxg:GridColumn FieldName="helpText" />                
+                <dxg:GridColumn FieldName="helpText" />
                 <dxg:GridColumn FieldName="url" />
 
             </dxg:GridControl>
@@ -125,11 +128,53 @@
 
             </dxg:GridControl>
 
+            <!--<dxe:TextEdit Grid.Column="3" Text="{Binding Transitions}" VerticalScrollBarVisibility="Visible" />-->
+
+            <dxg:GridControl Grid.Column="3" x:Name="gTrans"
+                ItemsSource="{Binding Transitions}"
+                ScrollViewer.CanContentScroll="True"
+                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                ScrollViewer.VerticalScrollBarVisibility="Auto">
+
+                <dxg:GridColumn FieldName="Name" />
+                <dxg:GridColumn FieldName="Target.to" />
+                <dxg:GridColumn FieldName="Target.actions" />
+
+            </dxg:GridControl>
+
+            <dxg:GridControl Grid.Column="4" x:Name="gAction"
+                ItemsSource="{Binding ElementName=gTrans, Path=SelectedItem.Target}"
+                ScrollViewer.CanContentScroll="True"
+                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                ScrollViewer.VerticalScrollBarVisibility="Auto">
+
+                <dxg:GridColumn FieldName="to" />
+                <dxg:GridColumn FieldName="actions">
+                    <!--<dxg:GridColumn.CellTemplate>
+                        <DataTemplate>
+                            <ListView  />
+                        </DataTemplate>
+                    </dxg:GridColumn.CellTemplate>-->
+                </dxg:GridColumn>
+            </dxg:GridControl>
+
+            <ListView Grid.Column="5" ItemsSource="{Binding ElementName=gAction, Path=SelectedItem.actions}" />
+            <!--<dxg:GridControl Grid.Column="5"                              
+                ItemsSource="{Binding ElementName=gAction, Path=SelectedItem}"
+                             AutoGenerateColumns="AddNew"
+                ScrollViewer.CanContentScroll="True"
+                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                ScrollViewer.VerticalScrollBarVisibility="Auto">
+                
+                
+
+            </dxg:GridControl>-->
+            
         </Grid>
 
         <dxe:TextEdit Grid.Row="4" Text="{Binding WorkItemTypes.SelectedItem.xmlForm}"  
                       TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
 
     </Grid>
-    
+
 </vncmvvm:ViewBase>
