--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypesFieldMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypesFieldMain.xaml
@@ -32,6 +32,8 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" MinHeight="100"/>            
         </Grid.RowDefinitions>
         
         <Border Style="{StaticResource CountBorder}" Grid.Row="0">
@@ -50,7 +52,48 @@
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
             <dxg:GridColumn FieldName="name" />
+            <dxg:GridColumn FieldName="referenceName" />
+            <dxg:GridColumn FieldName="alwaysRequired" />
+            <dxg:GridColumn FieldName="defaultValue" />
+            <dxg:GridColumn FieldName="helpText" />
+            <!--<dxg:GridColumn FieldName="url" />-->            
         </dxg:GridControl>
+
+        <dxe:TextEdit Grid.Row="2" Text="{Binding WorkItemTypesFields.SelectedItem.url}" />
+
+        <Grid Grid.Row="3">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <dxg:GridControl Grid.Column="0"
+                ItemsSource="{Binding WorkItemTypesFields.SelectedItem.allowedValues}"
+                AutoGenerateColumns="AddNew"
+                ScrollViewer.CanContentScroll="True"
+                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                ScrollViewer.VerticalScrollBarVisibility="Auto">
+
+                <!--<dxg:GridColumn FieldName="name" />-->
+
+            </dxg:GridControl>
+
+            <dxg:GridControl Grid.Column="1"
+                ItemsSource="{Binding WorkItemTypesFields.SelectedItem.dependendFields}"
+                ScrollViewer.CanContentScroll="True"
+                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                ScrollViewer.VerticalScrollBarVisibility="Auto">
+
+                <dxg:GridColumn FieldName="name" />
+                <dxg:GridColumn FieldName="referenceName" />
+                <dxg:GridColumn FieldName="url" />
+
+            </dxg:GridControl>
+
+        </Grid>
 
     </Grid>
     
