--- a/AZDORestApiExplorer/Presentation/Views/Shell.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/Shell.xaml
@@ -1,10 +1,11 @@
-﻿<Window x:Class="AZDORestApiExplorer.Presentation.Views.Shell"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:infra="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"
+﻿<Window 
+    x:Class="AZDORestApiExplorer.Presentation.Views.Shell"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:infra="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"
     xmlns:prism="http://prismlibrary.com/"
 
-        Title="Shell" Height="300" Width="400">
+    Title="Shell" Height="300" Width="400">
     <!--xmlns:mvvm="clr-namespace:Microsoft.Practices.Prism.Mvvm;assembly=Microsoft.Practices.Prism.Mvvm.Desktop"
         mvvm:ViewModelLocator.AutoWireViewModel="True"-->
     <Grid>
